--- a/styles.css
+++ b/styles.css
@@ -180,19 +180,21 @@ li.move-right{
   /* line-height: 1.5rem; */
 
 }
-@media only screen and (max-width:860px){
+@media  screen and (max-width:860px){
   /* html{display: none;} */
   .nav-list{
+    
     position: fixed;
     top: 0;
-    left: 0;
+    left: -100vh;
     height: 100vh;
     flex-direction: column;
     background-color: rgba(1, 1, 1,0.9);
     /* background-color: #191919; */
     align-items: initial;
     z-index: 1000;
-    display: none;
+    /* display: none; */
+    transition: left 850ms;
   }
   .nav-list > li{
     line-height: 6rem;
@@ -233,16 +235,24 @@ li.move-right{
   }
   nav.active .nav-list{
     display: flex;
+    left: 0;
+    /* height: 100vh; */
+    
   }
 }
 /*Hero*/
+body{
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+  url("images/bg.jpg") center no-repeat fixed;
+background-size: cover;
+}
 .hero {
+  margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
   height: 100vh;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
-    url("images/bg.jpg") center no-repeat;
-  background-size: cover;
+ 
 }
 
 .text {
@@ -280,7 +290,7 @@ li.move-right{
   text-transform: uppercase;
 }
 
-@media screen and (max-width: 830px) {
+@media screen and (max-width: 860px) {
   .text h1 {
     font-size: 4rem;
   }
